--- a/css/estilo.css
+++ b/css/estilo.css
@@ -204,3 +204,6 @@ header {
       .containerFormulario #registerForm input:focus {
         background-color: #99ff00;
         color: #005e00; } }
+
+.here {
+  color: #70b607; }
