--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -2,6 +2,7 @@
 $paleta:(
 verde-oscuro: rgb(0, 94, 0), 
 verde-claro: rgb(153, 255, 0),
+verde-focus: rgb(112, 182, 7),
 rojo-oscuro: rgb(158, 0, 0));
 
 $font-style: VT323;
@@ -279,4 +280,8 @@ header{
             }
         }
     }
+}
+
+.here{
+    color: map-get($paleta, verde-focus);
 }
