--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,6 +12,10 @@
   list-style-type: none;
   text-decoration: none; }
 
+.p {
+  margin: auto;
+  font-size: 3rem; }
+
 body {
   background-color: var(--color-oscuro);
   background-image: url(../img/patron-fallout.png);
@@ -33,8 +37,7 @@ body {
     width: 60%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    order: 2; }
+    align-items: center; }
     .nav .liContainer li {
       padding: 10px; }
       .nav .liContainer li:hover {
@@ -50,9 +53,20 @@ body {
     font-size: 7rem; }
   .nav h3 {
     align-self: center;
-    width: 20%;
     font-size: 3.3rem;
-    order: 3; }
+    order: 2; }
+  .nav button {
+    width: 24rem;
+    height: 4.5rem;
+    background-color: var(--color-claro);
+    color: var(--color-oscuro);
+    font-size: 2rem;
+    order: 3;
+    border-radius: 20px;
+    width: 14rem; }
+    .nav button:focus {
+      background-color: var(--color-claro);
+      color: var(--color-oscuro); }
 
 header {
   margin-top: 80px; }
@@ -152,16 +166,6 @@ header {
       .li-container ul li button:focus {
         background-color: var(--color-claro);
         color: #9e0000; }
-
-#switchButton {
-  width: 24rem;
-  height: 4.5rem;
-  background-color: var(--color-claro);
-  color: var(--color-oscuro);
-  font-size: 2rem; }
-  #switchButton:focus {
-    background-color: var(--color-claro);
-    color: var(--color-oscuro); }
 
 .containerFormulario #registerForm {
   display: flex;
