--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -8,7 +8,6 @@ verde-oscuro: var(--color-oscuro),
 verde-claro: var(--color-claro),
 verde-focus: var(--color-focus),
 rojo-oscuro: rgb(158, 0, 0),
-color-verdoso: #dd5a5a
 );
 
 
@@ -65,6 +64,10 @@ $font-style: VT323;
 
 }
 
+.p{
+    margin: auto;
+    font-size: 3rem;
+}
 body{
     background-color: map-get($paleta, verde-oscuro );
     background-image: url(../img/patron-fallout.png);
@@ -91,7 +94,7 @@ body{
         display: flex;
         justify-content: space-around;
         align-items: center;
-        order: 2;
+
         li{
             padding: 10px;
             &:hover{
@@ -114,9 +117,15 @@ body{
     }
     h3{
         align-self: center;
-        width: 20%;
+
         font-size: 3.3rem;
+        order: 2;
+    }
+    button{
+        @include input-desktop;
         order: 3;
+        border-radius: 20px;
+        width: 14rem;
     }
 }
 header{
@@ -228,9 +237,7 @@ header{
         }
     }
 }
-#switchButton{
-    @include input-desktop;
-}
+
 .containerFormulario{
     #registerForm{
         display: flex;
